# hrml

./: .gitignore  AI-DISCLOSURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
crates/hrml-cli/: Cargo.toml
crates/hrml-cli/src/: main.rs
crates/hrml-codegen/: Cargo.toml
crates/hrml-codegen/src/: css.rs  html.rs  js.rs  lib.rs
crates/hrml-lexer/: Cargo.toml
crates/hrml-lexer/src/: lib.rs  scanner.rs  token.rs
crates/hrml-parser/: Cargo.toml
crates/hrml-parser/src/: ast.rs  expr_lexer.rs  expr_parser.rs  lib.rs  parser.rs
crates/hrml-wasm/: Cargo.toml
crates/hrml-wasm/src/: lib.rs
docs/: architecture.md  comparison.md  getting-started.md  three-symbols.md  why-hrml.md
examples/: counter.hrml  fetch-on-load.hrml  form.hrml  input.hrml  tabs.hrml  todo.hrml  toggle.hrml
playground/: compiler.js  examples.js  index.html  style.css
playground/pkg/: hrml_wasm.d.ts  hrml_wasm.js  hrml_wasm_bg.wasm  hrml_wasm_bg.wasm.d.ts  package.json
