[workspace]
resolver = "2"
members = [
    "crates/hrml-lexer",
    "crates/hrml-parser",
    "crates/hrml-codegen",
    "crates/hrml-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mendexio/hrml"

[workspace.dependencies]
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
pretty_assertions = "1.4"
