[package]
name = "hrml-parser"
description = "Parser for the HRML web language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hrml-lexer = { path = "../hrml-lexer" }
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
